# azure-geocode-mapping

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  data.sh  publish.sh  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
examples/: locations.bicep  roles.bicep
src/geomapper/: bicep.py  mapping.py  utils.py
src/rolemapper/: bicep.py  utils.py
tests/: test_mapping.py  test_utils.py
tests/data/: azure-geocodes.xml  azure-regions.json
tests/geomapper/: test_mapping.py  test_utils.py
