[tool.poetry]
name = "geomapper"
version = "0.1.0"
description = ""
authors = ["Bart van der Braak <bartvdbraak@gmail.com>"]
readme = "README.md"
packages = [{include = "geomapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
azure-geocode-mapping = "geomapper.mapping:create_azure_mapping"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
