[tool.poetry]
name = "geomapper"
version = "0.1.0"
description = "A Python package to generate a mapping of Azure regions to its display names and geocodes."
authors = ["Bart van der Braak <bartvdbraak@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bartvdbraak/azure-geocode-mapping"
keywords = ["azure", "regions", "geocodes", "bicep", "arm"]
packages = [{include = "geomapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
azure-geocode-mapping = "geomapper.mapping:create_azure_mapping"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
